--- a/index.html
+++ b/index.html
@@ -7,24 +7,30 @@
     <title>Thành viên nhóm 5</title>
 
     <style>
-        /* === CHỦ ĐỀ GIÁNG SINH: ĐỎ – TRẮNG – XANH === */
+        /* === CHỦ ĐỀ GIÁNG SINH === */
         body {
             font-family: Arial, sans-serif;
-            background-color: #111; /* nền tối */
-            color: #fff; /* chữ trắng mặc định */
+            background-color: #fff; /* nền trắng */
+            color: #333; /* chữ mặc định tối dễ đọc */
+            transition: all 0.3s;
             margin: 0;
             padding: 0;
-            transition: all 0.3s;
         }
 
-        h1, h2, h3, .banner {
-            color: #ff0000; /* đỏ nổi bật */
-            text-shadow: 2px 2px 5px #fff; /* hiệu ứng lấp lánh */
+        h1, h2, h3 {
+            color: #d32f2f; /* đỏ giáng sinh dịu */
+            text-align: center;
+            text-shadow: 1px 1px 2px #fff;
+        }
+
+        /* Đảm bảo h1 “Các thành viên của nhóm” căn giữa */
+        h1#members {
+            text-align: center;
         }
 
         nav {
             width: 100%;
-            background: #007BFF; /* xanh dương navbar */
+            background: #d32f2f; /* đỏ dịu */
             padding: 15px 0;
             box-shadow: 0 2px 5px rgba(0,0,0,0.2);
             position: sticky;
@@ -42,7 +48,7 @@
         }
 
         nav ul li a {
-            color: #fff;
+            color: white;
             text-decoration: none;
             font-size: 18px;
             font-weight: bold;
@@ -59,7 +65,7 @@
             position: fixed;
             right: 20px;
             bottom: 20px;
-            background: #ff0000;
+            background: #d32f2f;
             color: white;
             border: none;
             padding: 14px 24px;
@@ -72,7 +78,7 @@
         }
 
         #toggleDark:hover {
-            background: #cc0000;
+            background: #b71c1c;
             transform: scale(1.05);
         }
 
@@ -86,7 +92,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #ff0000;
+            color: #d32f2f;
             font-size: 48px; 
             font-weight: bold;
             text-shadow: 2px 2px 8px #fff;
@@ -106,15 +112,15 @@
             padding: 20px; 
             border-radius: 15px; 
             text-align: center;
-            background: rgba(255,255,255,0.05);
-            box-shadow: 0 5px 15px rgba(255,0,0,0.2);
+            background: rgba(255, 0, 0, 0.05);
+            box-shadow: 0 5px 15px rgba(255,0,0,0.1);
             cursor: pointer;
             transition: 0.3s;
         }
 
         .member:hover {
             transform: scale(1.05); 
-            background: rgba(255,255,255,0.15);
+            background: rgba(255, 0, 0, 0.15);
         }
 
         .member img {
@@ -124,13 +130,13 @@
             object-fit: cover;
             border-radius: 50%;
             margin-bottom: 15px;
-            border: 5px solid #ff0000; 
+            border: 5px solid #d32f2f; 
         }
 
         .name {
             font-size: 24px; 
             font-weight: bold;
-            color: #00ff00; /* xanh lá cho tên thành viên */
+            color: #d32f2f;
         }
 
         /* PROFILE CARD */
@@ -141,11 +147,11 @@
             padding: 40px; 
             line-height: 1.8; 
             font-size: 20px; 
-            background: rgba(255,255,255,0.05);
+            background: rgba(255,0,0,0.05);
             border-radius: 15px;
-            box-shadow: 0 8px 20px rgba(255,0,0,0.2);
+            box-shadow: 0 8px 20px rgba(255,0,0,0.1);
             text-align: center;
-            color: #fff;
+            color: #333;
         }
 
         .profile-card img {
@@ -154,13 +160,13 @@
             border-radius: 50%;
             object-fit: cover;
             margin-bottom: 25px;
-            border: 6px solid #ff0000;
+            border: 6px solid #d32f2f;
         }
 
         .profile-card h2 {
             font-size: 32px; 
             margin-bottom: 15px;
-            color: #ff0000;
+            color: #d32f2f;
         }
 
         .profile-card p {
@@ -173,12 +179,12 @@
             font-style: italic;
             margin-top: 25px;
             padding: 0 30px;
-            color: #fff;
+            color: #555;
         }
 
         .profile-card a {
             font-size: 18px;
-            color: #00ff00; /* xanh lá link quay lại */
+            color: #d32f2f;
             text-decoration: none;
         }
 
@@ -188,35 +194,31 @@
             padding: 25px; 
             max-width: 1000px;
             border-radius: 10px;
-            background: rgba(255,255,255,0.05);
-            box-shadow: 0 2px 10px rgba(255,0,0,0.2);
+            background: rgba(255,0,0,0.05);
+            box-shadow: 0 2px 10px rgba(255,0,0,0.1);
         }
 
         .lessons h2 {
-            text-align: center;
             margin-bottom: 25px;
-            font-size: 32px; 
-            font-weight: bold;
-            color: #ff0000;
         }
 
         .lesson-list a {
             display: block;
             padding: 15px 20px; 
-            background: rgba(255,255,255,0.1);
+            background: rgba(255,0,0,0.05);
             border-radius: 10px;
             text-decoration: none;
-            color: #00ff00; /* xanh lá cho bài học */
+            color: #d32f2f;
             font-weight: bold;
             font-size: 20px; 
             margin-bottom: 15px;
-            box-shadow: 0 2px 6px rgba(255,0,0,0.2);
+            box-shadow: 0 2px 6px rgba(255,0,0,0.1);
             transition: 0.2s;
         }
 
         .lesson-list a:hover {
-            background: rgba(255,255,255,0.3);
-            color: #ff0000; /* đỏ khi hover */
+            background: rgba(255,0,0,0.15);
+            color: #fff;
             transform: scale(1.02); 
         }
 
@@ -226,16 +228,8 @@
             margin: 50px auto;
             padding: 40px 45px; 
             border-radius: 15px;
-            background: rgba(255,255,255,0.05);
-            box-shadow: 0 4px 15px rgba(255,0,0,0.2);
-        }
-
-        .feedback h2 {
-            text-align: center;
-            margin-bottom: 30px; 
-            font-size: 32px; 
-            font-weight: bold;
-            color: #ff0000;
+            background: rgba(255,0,0,0.05);
+            box-shadow: 0 4px 15px rgba(255,0,0,0.1);
         }
 
         .feedback-form .row {
@@ -251,20 +245,20 @@
             padding: 16px 20px; 
             font-size: 18px; 
             border-radius: 12px;
-            border: 1px solid #00ff00; /* xanh lá viền input */
-            background: rgba(255,255,255,0.1);
-            color: #fff;
+            border: 1px solid #d32f2f;
+            background: rgba(255,0,0,0.05);
+            color: #333;
             transition: 0.2s;
         }
 
         .feedback-form input::placeholder,
         .feedback-form textarea::placeholder {
-            color: #ffdddd;
+            color: #d32f2f;
         }
 
         .feedback-form input:focus,
         .feedback-form textarea:focus {
-            border-color: #ff0000;
+            border-color: #b71c1c;
             outline: none;
         }
 
@@ -275,22 +269,22 @@
             padding: 16px 28px; 
             font-size: 20px;
             border-radius: 30px;
-            background: #ff0000;
+            background: #d32f2f;
             color: white;
             border: none;
             cursor: pointer;
-            box-shadow: 0 3px 10px rgba(255,0,0,0.3);
+            box-shadow: 0 3px 10px rgba(211,47,47,0.3);
             transition: 0.3s;
         }
 
         .feedback-form button:hover {
-            background: #cc0000;
+            background: #b71c1c;
         }
 
         /* FOOTER */
         footer {
             margin-top: 50px;
-            background: #007BFF;
+            background: #d32f2f;
             text-align: center;
             padding: 25px; 
             color: white;
@@ -346,45 +340,6 @@
                 font-size: 18px;
             }
         }
-
-        /* DARK MODE */
-        body.dark {
-            background-color: #1e1f22;
-            color: #fff;
-        }
-
-        body.dark .member {
-            background: #2b2c30;
-        }
-
-        body.dark .member img {
-            border-color: #007BFF;
-        }
-
-        body.dark .name {
-            color: #00ff00;
-        }
-
-        body.dark .lessons, body.dark .feedback, body.dark .profile-card {
-            background: #2b2c30;
-        }
-
-        body.dark .lesson-list a {
-            background: #3a3b40;
-            color: #00ff00;
-        }
-
-        body.dark .lesson-list a:hover {
-            color: #ff0000;
-        }
-
-        body.dark nav {
-            background: #111;
-        }
-
-        body.dark footer {
-            background: #111;
-        }
     </style>
 </head>
 
@@ -435,10 +390,12 @@
             <img src="anh6.jpg" alt="Tô Nguyễn Tường Vân">
             <div class="name">Tô Nguyễn Tường Vân</div>
         </div>
+
     </div>
 
     <section class="lessons" id="lessons">
         <h2>Danh sách Bài Học</h2>
+
         <ul class="lesson-list">
             <li><a href="https://www.canva.com/design/DAG1lItBaPM/x443j1maq3FFFfSX_jxMvw/edit?utm_source=sharebutton" target="_blank">Bài 1 + 2: Làm quen với trí tuệ nhân tạo</a></li>
             <li><a href="#">Bài 3: Một số thiết bị mạng thông dụng</a></li>
@@ -504,4 +461,3 @@
 
 </body>
 </html>
-
