--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
             font-family: Arial, sans-serif;
             background-color: #fff; /* nền trắng */
             color: #333; /* chữ mặc định tối dễ đọc */
-            transition: all 0.3s;
             margin: 0;
             padding: 0;
+            transition: all 0.3s;
         }
 
         h1, h2, h3 {
-            color: #d32f2f; /* đỏ giáng sinh dịu */
+            color: #d32f2f; /* chữ đỏ */
             text-align: center;
+            margin: 40px 0;
             text-shadow: 1px 1px 2px #fff;
         }
 
-        /* Đảm bảo h1 “Các thành viên của nhóm” căn giữa */
         h1#members {
             text-align: center;
         }
 
         nav {
             width: 100%;
-            background: #d32f2f; /* đỏ dịu */
+            background: #388e3c; /* xanh cây thông */
             padding: 15px 0;
             box-shadow: 0 2px 5px rgba(0,0,0,0.2);
             position: sticky;
@@ -105,22 +105,22 @@
             gap: 30px; 
             max-width: 1200px; 
             margin: 0 auto;
-            padding: 0 20px;
+            padding: 0 20px 50px;
         }
 
         .member {
             padding: 20px; 
             border-radius: 15px; 
             text-align: center;
-            background: rgba(255, 0, 0, 0.05);
-            box-shadow: 0 5px 15px rgba(255,0,0,0.1);
+            background: rgba(56,142,60,0.1); /* xanh nhạt */
+            box-shadow: 0 5px 15px rgba(56,142,60,0.3);
             cursor: pointer;
             transition: 0.3s;
         }
 
         .member:hover {
             transform: scale(1.05); 
-            background: rgba(255, 0, 0, 0.15);
+            background: rgba(56,142,60,0.2);
         }
 
         .member img {
@@ -130,7 +130,7 @@
             object-fit: cover;
             border-radius: 50%;
             margin-bottom: 15px;
-            border: 5px solid #d32f2f; 
+            border: 5px solid #388e3c; 
         }
 
         .name {
@@ -147,9 +147,9 @@
             padding: 40px; 
             line-height: 1.8; 
             font-size: 20px; 
-            background: rgba(255,0,0,0.05);
+            background: rgba(56,142,60,0.1);
             border-radius: 15px;
-            box-shadow: 0 8px 20px rgba(255,0,0,0.1);
+            box-shadow: 0 8px 20px rgba(56,142,60,0.3);
             text-align: center;
             color: #333;
         }
@@ -160,7 +160,7 @@
             border-radius: 50%;
             object-fit: cover;
             margin-bottom: 25px;
-            border: 6px solid #d32f2f;
+            border: 6px solid #388e3c;
         }
 
         .profile-card h2 {
@@ -194,8 +194,8 @@
             padding: 25px; 
             max-width: 1000px;
             border-radius: 10px;
-            background: rgba(255,0,0,0.05);
-            box-shadow: 0 2px 10px rgba(255,0,0,0.1);
+            background: rgba(56,142,60,0.1);
+            box-shadow: 0 2px 10px rgba(56,142,60,0.3);
         }
 
         .lessons h2 {
@@ -205,19 +205,19 @@
         .lesson-list a {
             display: block;
             padding: 15px 20px; 
-            background: rgba(255,0,0,0.05);
+            background: rgba(56,142,60,0.1);
             border-radius: 10px;
             text-decoration: none;
             color: #d32f2f;
             font-weight: bold;
             font-size: 20px; 
             margin-bottom: 15px;
-            box-shadow: 0 2px 6px rgba(255,0,0,0.1);
+            box-shadow: 0 2px 6px rgba(56,142,60,0.3);
             transition: 0.2s;
         }
 
         .lesson-list a:hover {
-            background: rgba(255,0,0,0.15);
+            background: rgba(56,142,60,0.2);
             color: #fff;
             transform: scale(1.02); 
         }
@@ -228,8 +228,8 @@
             margin: 50px auto;
             padding: 40px 45px; 
             border-radius: 15px;
-            background: rgba(255,0,0,0.05);
-            box-shadow: 0 4px 15px rgba(255,0,0,0.1);
+            background: rgba(56,142,60,0.1);
+            box-shadow: 0 4px 15px rgba(56,142,60,0.3);
         }
 
         .feedback-form .row {
@@ -245,20 +245,20 @@
             padding: 16px 20px; 
             font-size: 18px; 
             border-radius: 12px;
-            border: 1px solid #d32f2f;
-            background: rgba(255,0,0,0.05);
+            border: 1px solid #388e3c;
+            background: rgba(56,142,60,0.05);
             color: #333;
             transition: 0.2s;
         }
 
         .feedback-form input::placeholder,
         .feedback-form textarea::placeholder {
-            color: #d32f2f;
+            color: #388e3c;
         }
 
         .feedback-form input:focus,
         .feedback-form textarea:focus {
-            border-color: #b71c1c;
+            border-color: #2e7d32;
             outline: none;
         }
 
@@ -284,12 +284,28 @@
         /* FOOTER */
         footer {
             margin-top: 50px;
-            background: #d32f2f;
+            background: #388e3c;
             text-align: center;
             padding: 25px; 
             color: white;
             font-size: 18px;
             text-shadow: 1px 1px 2px #fff;
+        }
+
+        /* HIỆU ỨNG LUNG LINH CHO VIỀN XANH */
+        @keyframes glow {
+            0%, 100% {
+                box-shadow: 0 0 10px rgba(56,142,60,0.3);
+                border-color: #388e3c;
+            }
+            50% {
+                box-shadow: 0 0 20px rgba(56,142,60,0.6);
+                border-color: #76ff03;
+            }
+        }
+
+        .member, .profile-card, .lessons, .feedback {
+            animation: glow 2s infinite;
         }
 
         /* RESPONSIVE */
@@ -390,12 +406,10 @@
             <img src="anh6.jpg" alt="Tô Nguyễn Tường Vân">
             <div class="name">Tô Nguyễn Tường Vân</div>
         </div>
-
     </div>
 
     <section class="lessons" id="lessons">
         <h2>Danh sách Bài Học</h2>
-
         <ul class="lesson-list">
             <li><a href="https://www.canva.com/design/DAG1lItBaPM/x443j1maq3FFFfSX_jxMvw/edit?utm_source=sharebutton" target="_blank">Bài 1 + 2: Làm quen với trí tuệ nhân tạo</a></li>
             <li><a href="#">Bài 3: Một số thiết bị mạng thông dụng</a></li>
@@ -461,3 +475,4 @@
 
 </body>
 </html>
+
