--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 
         /* PROFILE CARD */
         .profile-card {
-            max-width: 700px; 
-            width: 90%; 
+            max-width: 900px; /*làm rộng hơn */
+            width: 95%; 
             margin: 50px auto;
             padding: 40px; 
             line-height: 1.8; 
@@ -475,4 +475,5 @@
 
 </body>
 </html>
+
 
