--- a/thy.html
+++ b/thy.html
@@ -2,52 +2,127 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Profile - Nguyễn Bảo Thy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nguyễn Bảo Thy - Profile</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #EAF6FF;
+            background-color: #fff;
+            color: #333;
             margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            max-width: 1000px;
+            margin: 50px auto;
             padding: 30px;
+            background: rgba(56,142,60,0.1);
+            border-radius: 20px;
+            box-shadow: 0 8px 20px rgba(56,142,60,0.3);
+        }
+
+        .profile-image {
+            flex: 1 1 300px;
             text-align: center;
         }
-        .card {
-            background: #fff;
-            width: 90%;
-            max-width: 450px;
-            margin: auto;
-            padding: 25px;
-            border-radius: 15px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-        }
-        img {
-            width: 150px;
-            height:150px;
-            border-radius: 50%;
+
+        .profile-image img {
+            width: 300px;
+            height: 300px;
             object-fit: cover;
+            border-radius: 50%;
+            border: 6px solid #388e3c;
+            margin-bottom: 20px;
         }
-        h2 { margin-top: 10px; }
-        .info { text-align: left; margin-top: 15px; line-height: 1.6; }
-        a { display: inline-block; margin-top: 20px; color: #007BFF; font-weight: bold; text-decoration: none; }
+
+        .profile-info {
+            flex: 2 1 500px;
+            padding: 20px 40px;
+        }
+
+        .profile-info h1 {
+            font-size: 48px;
+            color: #d32f2f;
+            margin-bottom: 20px;
+        }
+
+        .profile-info p {
+            font-size: 22px;
+            margin: 12px 0;
+        }
+
+        .profile-info .label {
+            font-weight: bold;
+            color: #388e3c;
+        }
+
+        .quote {
+            font-style: italic;
+            color: #555;
+            font-size: 20px;
+            margin-top: 20px;
+            padding-left: 10px;
+            border-left: 4px solid #388e3c;
+        }
+
+        /* Responsive */
+        @media (max-width: 850px) {
+            .container {
+                flex-direction: column;
+                align-items: center;
+            }
+            .profile-image img {
+                width: 250px;
+                height: 250px;
+            }
+            .profile-info h1 {
+                font-size: 36px;
+            }
+            .profile-info p {
+                font-size: 20px;
+            }
+        }
+
+        @media (max-width: 550px) {
+            .profile-image img {
+                width: 200px;
+                height: 200px;
+            }
+            .profile-info h1 {
+                font-size: 28px;
+            }
+            .profile-info p {
+                font-size: 18px;
+            }
+            .quote {
+                font-size: 16px;
+            }
+        }
+
     </style>
 </head>
 <body>
 
-    <div class="card">
-        <img src="anh2.jpg" alt="">
-        <h2>Nguyễn Bảo Thy</h2>
-
-        <div class="info">
-            <p><b>Ngày sinh:</b> 07/06/2008</p>
-            <p><b>Email:</b> thybao573@gmail.com</p>
-            <p><b>Châm ngôn yêu thích:</b><br> “안녕~ 여러분은 잘 지냈어요?
-						여기에 제 정보가 있습니다👋🏻
-						제 이름이 보오 티입니다, 저도 학생입니다
-						반가워요🐼
-						남자 친구 없어=)))”</p>
+    <div class="container">
+        <div class="profile-image">
+            <img src="anh2.jpg" alt="Nguyễn Bảo Thy">
         </div>
-
-        <a href="index.html">← Quay lại Trang chính</a>
+        <div class="profile-info">
+            <h1>Đặng Nguyễn Trúc My</h1>
+            <p><span class="label">Ngày sinh:</span> 07/06/2008</p>
+            <p><span class="label">Số điện thoại:</span> 0767036816</p>
+            <p><span class="label">Email:</span> thybao573@gmail.com</p>
+            <p><span class="label">Sở thích:</span> Đọc sách, móc len, nghe nhạc</p>
+            <p class="quote">"안녕~ 여러분은 잘 지냈어요?
+								여기에 제 정보가 있습니다👋🏻
+								제 이름이 보오 티입니다, 저도 학생입니다
+								반가워요🐼
+								남자 친구 없어=)))"</p>
+        </div>
     </div>
 
 </body>
