--- a/truc.html
+++ b/truc.html
@@ -19,7 +19,7 @@
             flex-wrap: wrap;
             max-width: 1000px;
             margin: 50px auto;
-            padding: 20px;
+            padding: 30px;
             background: rgba(56,142,60,0.1);
             border-radius: 20px;
             box-shadow: 0 8px 20px rgba(56,142,60,0.3);
@@ -41,7 +41,7 @@
 
         .profile-info {
             flex: 2 1 500px;
-            padding: 20px;
+            padding: 20px 40px;
         }
 
         .profile-info h1 {
@@ -58,6 +58,15 @@
         .profile-info .label {
             font-weight: bold;
             color: #388e3c;
+        }
+
+        .quote {
+            font-style: italic;
+            color: #555;
+            font-size: 20px;
+            margin-top: 20px;
+            padding-left: 10px;
+            border-left: 4px solid #388e3c;
         }
 
         /* Responsive */
@@ -89,6 +98,9 @@
             .profile-info p {
                 font-size: 18px;
             }
+            .quote {
+                font-size: 16px;
+            }
         }
 
     </style>
@@ -101,10 +113,11 @@
         </div>
         <div class="profile-info">
             <h1>Ngô Thanh Trúc</h1>
-            <p><span class="label">Email:</span> ntt27011@gmail.com</p>
             <p><span class="label">Ngày sinh:</span> 22/2/2008</p>
             <p><span class="label">Số điện thoại:</span> 0942635820</p>
-            <p><span class="label">Sở thích:</span> Nghe nhạc, vẽ tranh, đọc truyện tranh, chơi bóng chuyền</p>
+            <p><span class="label">Email:</span> ntt27011@gmail.com</p>
+            <p><span class="label">Sở thích:</span> nghe nhạc, vẽ tranh, đọc truyện tranh, chơi bóng chuyền</p>
+            <p class="quote">"今は葉が黄色くなり、秋は過ぎ去りました。私は一生あなたのことを悲しむでしょう。"</p>
         </div>
     </div>
 
