--- a/duong.html
+++ b/duong.html
@@ -2,48 +2,124 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Profile - Huỳnh Ánh Dương</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Huỳnh Ánh Dương - Profile</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #EAF6FF;
+            background-color: #fff;
+            color: #333;
             margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            max-width: 1000px;
+            margin: 50px auto;
             padding: 30px;
+            background: rgba(56,142,60,0.1);
+            border-radius: 20px;
+            box-shadow: 0 8px 20px rgba(56,142,60,0.3);
+        }
+
+        .profile-image {
+            flex: 1 1 300px;
             text-align: center;
         }
-        .card {
-            background: #fff;
-            width: 90%;
-            max-width: 450px;
-            margin: auto;
-            padding: 25px;
-            border-radius: 15px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-        }
-        img {
-            width: 150px;
-            height:150px;
-            border-radius: 50%;
+
+        .profile-image img {
+            width: 300px;
+            height: 300px;
             object-fit: cover;
+            border-radius: 50%;
+            border: 6px solid #388e3c;
+            margin-bottom: 20px;
         }
-        h2 { margin-top: 10px; }
-        .info { text-align: left; margin-top: 15px; line-height: 1.6; }
-        a { display: inline-block; margin-top: 20px; color: #007BFF; font-weight: bold; text-decoration: none; }
+
+        .profile-info {
+            flex: 2 1 500px;
+            padding: 20px 40px;
+        }
+
+        .profile-info h1 {
+            font-size: 48px;
+            color: #d32f2f;
+            margin-bottom: 20px;
+        }
+
+        .profile-info p {
+            font-size: 22px;
+            margin: 12px 0;
+        }
+
+        .profile-info .label {
+            font-weight: bold;
+            color: #388e3c;
+        }
+
+        .quote {
+            font-style: italic;
+            color: #555;
+            font-size: 20px;
+            margin-top: 20px;
+            padding-left: 10px;
+            border-left: 4px solid #388e3c;
+        }
+
+        /* Responsive */
+        @media (max-width: 850px) {
+            .container {
+                flex-direction: column;
+                align-items: center;
+            }
+            .profile-image img {
+                width: 250px;
+                height: 250px;
+            }
+            .profile-info h1 {
+                font-size: 36px;
+            }
+            .profile-info p {
+                font-size: 20px;
+            }
+        }
+
+        @media (max-width: 550px) {
+            .profile-image img {
+                width: 200px;
+                height: 200px;
+            }
+            .profile-info h1 {
+                font-size: 28px;
+            }
+            .profile-info p {
+                font-size: 18px;
+            }
+            .quote {
+                font-size: 16px;
+            }
+        }
+
     </style>
 </head>
 <body>
 
-    <div class="card">
-        <img src="anh4.jpg" alt="">
-        <h2>Huỳnh Ánh Dương</h2>
-
-        <div class="info">
-            <p><b>Ngày sinh:</b> 09/10/2008</p>
-            <p><b>Email:</b> aduo0908@gmail.com</p>
-            <p><b>Châm ngôn yêu thích:</b><br> “Vivre pour l'amour. Trouve la joie, appelle-moi🤙🏻”</p>
+    <div class="container">
+        <div class="profile-image">
+            <img src="anh4.jpg" alt="Huỳnh Ánh Dương">
         </div>
-
-        <a href="index.html">← Quay lại Trang chính</a>
+        <div class="profile-info">
+            <h1>Huỳnh Ánh Dương</h1>
+            <p><span class="label">Ngày sinh:</span> 09/10/2008</p>
+            <p><span class="label">Số điện thoại:</span> 0944172514</p>
+            <p><span class="label">Email:</span> aduo0908@gmail.com</p>
+            <p><span class="label">Sở thích:</span> Thích tìm niềm vui</p>
+            <p class="quote">"Vivre pour l'amour
+                                Trouve la joie, appelle-moi🤙🏻"</p>
+        </div>
     </div>
 
 </body>
