--- a/thy.html
+++ b/thy.html
@@ -112,7 +112,7 @@
             <img src="anh2.jpg" alt="Nguyễn Bảo Thy">
         </div>
         <div class="profile-info">
-            <h1>Đặng Nguyễn Trúc My</h1>
+            <h1>Nguyễn Bảo Thy</h1>
             <p><span class="label">Ngày sinh:</span> 07/06/2008</p>
             <p><span class="label">Số điện thoại:</span> 0767036816</p>
             <p><span class="label">Email:</span> thybao573@gmail.com</p>
@@ -127,3 +127,4 @@
 
 </body>
 </html>
+
