--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="description" content="Trang thông tin nhóm 5 và danh sách bài học của các thành viên.">
     <title>Thành viên nhóm 5</title>
 
+    <!-- Google Fonts: Comfortaa -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;700&display=swap" rel="stylesheet">
+
     <style>
-        /* === CHỦ ĐỀ GIÁNG SINH === */
+        /* === CHỦ ĐỀ GIÁNG SINH VỚI FONT COMFORTAA === */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Comfortaa', cursive;
             background-color: #fff; /* nền trắng */
             color: #333; /* chữ mặc định tối dễ đọc */
             margin: 0;
@@ -18,6 +21,7 @@
         }
 
         h1, h2, h3 {
+            font-family: 'Comfortaa', cursive;
             color: #d32f2f; /* chữ đỏ */
             text-align: center;
             margin: 40px 0;
@@ -48,6 +52,7 @@
         }
 
         nav ul li a {
+            font-family: 'Comfortaa', cursive;
             color: white;
             text-decoration: none;
             font-size: 18px;
@@ -62,6 +67,7 @@
 
         /* DARK MODE BUTTON */
         #toggleDark {
+            font-family: 'Comfortaa', cursive;
             position: fixed;
             right: 20px;
             bottom: 20px;
@@ -84,6 +90,7 @@
 
         /* BANNER */
         .banner {
+            font-family: 'Comfortaa', cursive;
             width: 100%;
             height: 300px;
             background-image: url('/mnt/data/32e96f17-c310-431c-ad2c-b9878d0819e6.png'); 
@@ -109,6 +116,7 @@
         }
 
         .member {
+            font-family: 'Comfortaa', cursive;
             padding: 20px; 
             border-radius: 15px; 
             text-align: center;
@@ -134,6 +142,7 @@
         }
 
         .name {
+            font-family: 'Comfortaa', cursive;
             font-size: 24px; 
             font-weight: bold;
             color: #d32f2f;
@@ -141,6 +150,7 @@
 
         /* PROFILE CARD */
         .profile-card {
+            font-family: 'Comfortaa', cursive;
             max-width: 900px; /*làm rộng hơn */
             width: 95%; 
             margin: 50px auto;
@@ -164,32 +174,19 @@
         }
 
         .profile-card h2 {
+            font-family: 'Comfortaa', cursive;
             font-size: 32px; 
             margin-bottom: 15px;
             color: #d32f2f;
         }
 
-        .profile-card p {
-            font-size: 20px;
-            margin: 10px 0;
-        }
-
-        .profile-card .quote-text {
-            font-size: 22px;
-            font-style: italic;
-            margin-top: 25px;
-            padding: 0 30px;
-            color: #555;
-        }
-
-        .profile-card a {
-            font-size: 18px;
-            color: #d32f2f;
-            text-decoration: none;
+        .profile-card p, .profile-card .quote-text, .profile-card a {
+            font-family: 'Comfortaa', cursive;
         }
 
         /* LESSON LIST */
         .lessons {
+            font-family: 'Comfortaa', cursive;
             margin: 40px auto;
             padding: 25px; 
             max-width: 1000px;
@@ -199,10 +196,12 @@
         }
 
         .lessons h2 {
+            font-family: 'Comfortaa', cursive;
             margin-bottom: 25px;
         }
 
         .lesson-list a {
+            font-family: 'Comfortaa', cursive;
             display: block;
             padding: 15px 20px; 
             background: rgba(56,142,60,0.1);
@@ -224,6 +223,7 @@
 
         /* FEEDBACK FORM */
         .feedback {
+            font-family: 'Comfortaa', cursive;
             max-width: 800px;
             margin: 50px auto;
             padding: 40px 45px; 
@@ -241,6 +241,7 @@
 
         .feedback-form input,
         .feedback-form textarea {
+            font-family: 'Comfortaa', cursive;
             flex: 1 1 100%;
             padding: 16px 20px; 
             font-size: 18px; 
@@ -263,6 +264,7 @@
         }
 
         .feedback-form button {
+            font-family: 'Comfortaa', cursive;
             display: block;
             width: 240px; 
             margin: 10px auto 0;
@@ -283,6 +285,7 @@
 
         /* FOOTER */
         footer {
+            font-family: 'Comfortaa', cursive;
             margin-top: 50px;
             background: #388e3c;
             text-align: center;
@@ -470,10 +473,3 @@
             e.preventDefault();
             alert('Cảm ơn bạn đã gửi phản hồi! Chúng tôi sẽ xem xét ý kiến của bạn.');
             feedbackForm.reset();
-        });
-    </script>
-
-</body>
-</html>
-
-
