--- a/thy.html
+++ b/thy.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nguyễn Bảo Thy - Profile</title>
 
+    <!-- Font Comfortaa -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Comfortaa', sans-serif;
             background-color: #fff;
             color: #333;
             margin: 0;
@@ -56,7 +59,7 @@
         }
 
         .profile-info .label {
-            font-weight: bold;
+            font-weight: 700;
             color: #388e3c;
         }
 
@@ -67,6 +70,7 @@
             margin-top: 20px;
             padding-left: 10px;
             border-left: 4px solid #388e3c;
+            white-space: pre-line;
         }
 
         /* Responsive */
@@ -116,15 +120,14 @@
             <p><span class="label">Ngày sinh:</span> 07/06/2008</p>
             <p><span class="label">Số điện thoại:</span> 0767036816</p>
             <p><span class="label">Email:</span> thybao573@gmail.com</p>
-            <p><span class="label">Sở thích:</span> Đọc sách, móc len, nghe nhạc</p>
+            <p><span class="label">Sở thích:</span> Móc len, đọc truyện, xem phim👽</p>
             <p class="quote">"안녕~ 여러분은 잘 지냈어요?
-								여기에 제 정보가 있습니다👋🏻
-								제 이름이 보오 티입니다, 저도 학생입니다
-								반가워요🐼
-								남자 친구 없어=)))"</p>
+여기에 제 정보가 있습니다👋🏻
+제 이름이 보오 티입니다, 저도 학생입니다
+반가워요🐼
+남자 친구 없어=)))"</p>
         </div>
     </div>
 
 </body>
 </html>
-
