--- a/truc.html
+++ b/truc.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ngô Thanh Trúc - Profile</title>
 
+    <!-- Font Comfortaa -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Comfortaa', sans-serif;
             background-color: #fff;
             color: #333;
             margin: 0;
@@ -56,7 +59,7 @@
         }
 
         .profile-info .label {
-            font-weight: bold;
+            font-weight: 700;
             color: #388e3c;
         }
 
