--- a/duong.html
+++ b/duong.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huỳnh Ánh Dương - Profile</title>
 
+    <!-- Font Comfortaa -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Comfortaa', sans-serif;
             background-color: #fff;
             color: #333;
             margin: 0;
@@ -56,7 +59,7 @@
         }
 
         .profile-info .label {
-            font-weight: bold;
+            font-weight: 700;
             color: #388e3c;
         }
 
@@ -117,7 +120,7 @@
             <p><span class="label">Số điện thoại:</span> 0944172514</p>
             <p><span class="label">Email:</span> aduo0908@gmail.com</p>
             <p><span class="label">Sở thích:</span> Thích tìm niềm vui</p>
-            <p class="quote">"Vivre pour l'amour
+            <p class="quote">"Vivre pour l'amour<br>
                                 Trouve la joie, appelle-moi🤙🏻"</p>
         </div>
     </div>
