--- a/han.html
+++ b/han.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nguyễn Huỳnh Bảo Hân - Profile</title>
 
+    <!-- Font Comfortaa -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Comfortaa', sans-serif;
             background-color: #fff;
             color: #333;
             margin: 0;
@@ -56,7 +59,119 @@
         }
 
         .profile-info .label {
-            font-weight: bold;
+            font-weight: 700;
+            color: #388e3c;
+        }
+
+        .quote {
+            font-style: italic;
+            color: #555;
+            font-size: 20px;
+            margin-top: 20px;
+            padding-left: 10px;
+            border-left: 4px solid #388e3c;
+        }
+
+        /* Responsive */
+        @media (max-width: 850px) {
+            .container {
+                flex-direction: column;
+                align-items: center;
+            }
+            .profile-image img {
+                width: 250px;
+                height: 250px;
+            }
+            .profile-info h1 {
+                font-size: 36px;
+            }
+            .profile-info p {
+                font-size: 20px;
+            }
+        }
+
+        @media (max-width: 550px) {
+            .profile-image img {
+                width: 200px;
+                height: 200px;
+            }
+            .profile-info h1 {
+                font-size: 28px;
+            }
+            .profile-info p {
+                font-size: 18px;
+            }
+            .quote {
+                font-size: 16px;
+            }
+        }
+
+    </style>
+</head>
+<body>
+
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Huỳnh Ánh Dương - Profile</title>
+
+    <!-- Font Comfortaa -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Comfortaa', sans-serif;
+            background-color: #fff;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            max-width: 1000px;
+            margin: 50px auto;
+            padding: 30px;
+            background: rgba(56,142,60,0.1);
+            border-radius: 20px;
+            box-shadow: 0 8px 20px rgba(56,142,60,0.3);
+        }
+
+        .profile-image {
+            flex: 1 1 300px;
+            text-align: center;
+        }
+
+        .profile-image img {
+            width: 300px;
+            height: 300px;
+            object-fit: cover;
+            border-radius: 50%;
+            border: 6px solid #388e3c;
+            margin-bottom: 20px;
+        }
+
+        .profile-info {
+            flex: 2 1 500px;
+            padding: 20px 40px;
+        }
+
+        .profile-info h1 {
+            font-size: 48px;
+            color: #d32f2f;
+            margin-bottom: 20px;
+        }
+
+        .profile-info p {
+            font-size: 22px;
+            margin: 12px 0;
+        }
+
+        .profile-info .label {
+            font-weight: 700;
             color: #388e3c;
         }
 
@@ -109,15 +224,22 @@
 
     <div class="container">
         <div class="profile-image">
-            <img src="anh5.jpg" alt="Nguyễn Huỳnh Bảo Hân">
+            <img src="anh4.jpg" alt="Huỳnh Ánh Dương">
         </div>
         <div class="profile-info">
-            <h1>Nguyễn Huỳnh Bảo Hân</h1>
-            <p><span class="label">Ngày sinh:</span> 03/03/2008</p>
-            <p><span class="label">Số điện thoại:</span> 0819529588</p>
-            <p><span class="label">Email:</span> baohannguyenhuynh00308@gmail.com</p>
-            <p><span class="label">Sở thích:</span> Xem phim</p>
-            <p class="quote">"I can't change the direction of the wind, but I can adjust my sails to always reach my destination"</p>
+            <h1>Huỳnh Ánh Dương</h1>
+            <p><span class="label">Ngày sinh:</span> 09/10/2008</p>
+            <p><span class="label">Số điện thoại:</span> 0944172514</p>
+            <p><span class="label">Email:</span> aduo0908@gmail.com</p>
+            <p><span class="label">Sở thích:</span> Thích tìm niềm vui</p>
+            <p class="quote">"Vivre pour l'amour<br>
+                                Trouve la joie, appelle-moi🤙🏻"</p>
+        </div>
+    </div>
+
+</body>
+</html>
+
         </div>
     </div>
 
