--- a/van.html
+++ b/van.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tô Nguyễn Tường Vân - Profile</title>
 
+    <!-- Font Comfortaa -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;600;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Comfortaa', sans-serif;
             background-color: #fff;
             color: #333;
             margin: 0;
@@ -69,7 +72,6 @@
             border-left: 4px solid #388e3c;
         }
 
-        /* Responsive */
         @media (max-width: 850px) {
             .container {
                 flex-direction: column;
@@ -126,3 +128,5 @@
 
 </body>
 </html>
+
+
