--- a/index.html
+++ b/index.html
@@ -402,7 +402,20 @@
 body {
     margin-left: 230px;
 }
+.banner {
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    animation: glow 2s infinite;
+}
 
+@keyframes glow {
+    0% { text-shadow: 0 0 5px white; }
+    50% { text-shadow: 0 0 15px white; }
+    100% { text-shadow: 0 0 5px white; }
+}
+        
     </style>
 </head>
 
@@ -417,9 +430,9 @@ body {
     <a href="#feedback">Phản hồi</a>
 </aside>
 
-    <div class="banner">
-        BÁO CÁO TIN HỌC
-    </div>
+<div class="banner">
+    ✨ 📚 BÁO CÁO TIN HỌC 📚 ✨
+</div>
 
     <h1 id="members">Các thành viên của nhóm</h1>
 
@@ -521,3 +534,4 @@ body {
     </script>
 </body>
 </html>
+
