--- a/bai10.html
+++ b/bai10.html
@@ -22,7 +22,8 @@
         h1 {
             margin-top: 0;
             text-align: center;
-            font-size: 32px;
+            font-size: 36px;
+            margin-bottom: 10px;
         }
 
         .content {
@@ -30,23 +31,43 @@
             line-height: 1.9;
         }
 
-        a {
-            display: inline-block;
+        h2 {
             margin-top: 30px;
-            text-decoration: none;
-            font-weight: bold;
-            color: #007BFF;
+            font-size: 26px;
+            color: #0056d6;
+        }
+
+        p {
             font-size: 20px;
+            margin-bottom: 12px;
         }
 
         pre, code {
             font-size: 18px;
             background: #f8f8f8;
-            padding: 12px;
+            padding: 14px;
             border-radius: 8px;
             overflow-x: auto;
             display: block;
             border: 1px solid #ddd;
+            margin-bottom: 25px;
+        }
+
+        a.back-btn {
+            display: inline-block;
+            margin-top: 40px;
+            text-decoration: none;
+            font-weight: bold;
+            color: #fff;
+            background: #007BFF;
+            padding: 12px 20px;
+            border-radius: 8px;
+            font-size: 18px;
+            transition: 0.2s;
+        }
+
+        a.back-btn:hover {
+            background: #0056d6;
         }
     </style>
 </head>
@@ -95,7 +116,7 @@
 
     </div>
 
-    <a href="index.html">← Quay lại trang chính</a>
+    <a href="index.html" class="back-btn">← Quay lại trang chính</a>
 
 </div>
 
