--- a/bai17.html
+++ b/bai17.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #EAF6FF;
+            background: linear-gradient(135deg, #EAF6FF, #D7E8FF);
             margin: 0;
             padding: 40px;
         }
@@ -16,20 +16,29 @@
             max-width: 1100px;
             margin: auto;
             background: #fff;
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            padding: 45px;
+            border-radius: 14px;
+            box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+            animation: fadeIn 0.4s ease;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         h1 {
             margin-top: 0;
             text-align: center;
-            font-size: 32px;
+            font-size: 34px;
+            color: #004E8F;
+            letter-spacing: 1px;
+            font-weight: bold;
         }
 
         .content {
             font-size: 20px;
-            line-height: 1.85;
+            line-height: 1.9;
         }
 
         a {
@@ -38,21 +47,30 @@
             font-size: 22px;
             text-decoration: none;
             font-weight: bold;
-            color: #007BFF;
+            color: white;
+            background: #007bff;
+            padding: 12px 26px;
+            border-radius: 8px;
+            transition: 0.25s;
+        }
+
+        a:hover {
+            background: #0056c9;
+            transform: scale(1.03);
         }
 
         .raw-text {
             width: 100%;
             height: 680px;
-            padding: 18px;
-            font-family: monospace;
-            font-size: 18px;
+            padding: 20px;
+            font-family: Consolas, monospace;
+            font-size: 19px;
             white-space: pre-wrap;
             overflow: auto;
             box-sizing: border-box;
             border: 2px solid #bbb;
             border-radius: 10px;
-            background: #fafafa;
+            background: #fdfdfd;
         }
     </style>
 </head>
