--- a/bai18.html
+++ b/bai18.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Bài 18: Thực hiện tổng hợp thiết kế trang web</title>
 
+    <!-- FONT COMFORTAA -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Comfortaa', sans-serif;
             background: linear-gradient(135deg, #EAF6FF, #D7E8FF);
             margin: 0;
             padding: 40px;
@@ -16,29 +19,23 @@
             max-width: 1100px;
             margin: auto;
             background: #fff;
-            padding: 45px;
+            padding: 50px;
             border-radius: 14px;
             box-shadow: 0 6px 18px rgba(0,0,0,0.25);
-            animation: fadeIn 0.4s ease;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
         }
 
         h1 {
-            margin-top: 0;
             text-align: center;
             font-size: 34px;
             color: #004E8F;
-            font-weight: bold;
-            margin-bottom: 20px;
+            font-weight: 700;
+            margin-bottom: 25px;
         }
 
         .content {
             font-size: 20px;
-            line-height: 1.9;
+            line-height: 1.95;
+            white-space: pre-line;
         }
 
         a {
@@ -46,7 +43,7 @@
             margin-top: 35px;
             font-size: 22px;
             text-decoration: none;
-            font-weight: bold;
+            font-weight: 600;
             color: #fff;
             background: #007BFF;
             padding: 12px 26px;
@@ -58,20 +55,6 @@
             background: #0056c9;
             transform: scale(1.04);
         }
-
-        .raw-text {
-            width: 100%;
-            height: 700px;
-            padding: 20px;
-            font-family: Consolas, monospace;
-            font-size: 19px;
-            white-space: pre-wrap;
-            overflow: auto;
-            border: 2px solid #bbb;
-            border-radius: 10px;
-            background: #fdfdfd;
-            box-sizing: border-box;
-        }
     </style>
 </head>
 
@@ -82,7 +65,6 @@
     <h1>Bài 18: Thực hiện tổng hợp thiết kế trang web</h1>
 
     <div class="content">
-        <textarea class="raw-text" readonly>
 Luyện tập 1 trang 105 Tin học 12: Tạo trang dang_ki.html chứa biểu mẫu đăng kí câu lạc bộ và bổ sung liên kết tới trang dang_ki trong phần cuối trang của tất cả các trang.
 Lời giải:
 Để tạo trang "dang_ki.html" chứa biểu mẫu đăng kí câu lạc bộ và bổ sung liên kết tới trang "dang_ki" trong phần cuối trang của tất cả các trang, em có thể làm như sau:
@@ -141,7 +123,6 @@ Ví dụ:
   font-size: 16px;
   color: #333;
 }
-        </textarea>
     </div>
 
     <a href="index.html">← Quay lại trang chính</a>
