--- a/bai18.html
+++ b/bai18.html
@@ -32,10 +32,15 @@
             margin-bottom: 25px;
         }
 
-        .content {
+        pre {
             font-size: 20px;
-            line-height: 1.95;
-            white-space: pre-line;
+            line-height: 2;
+            white-space: pre-wrap;
+            overflow-wrap: break-word;
+            background: #F8FBFF;
+            border-left: 6px solid #4A8FE7;
+            padding: 28px;
+            border-radius: 12px;
         }
 
         a {
@@ -64,7 +69,7 @@
 
     <h1>Bài 18: Thực hiện tổng hợp thiết kế trang web</h1>
 
-    <div class="content">
+    <pre>
 Luyện tập 1 trang 105 Tin học 12: Tạo trang dang_ki.html chứa biểu mẫu đăng kí câu lạc bộ và bổ sung liên kết tới trang dang_ki trong phần cuối trang của tất cả các trang.
 Lời giải:
 Để tạo trang "dang_ki.html" chứa biểu mẫu đăng kí câu lạc bộ và bổ sung liên kết tới trang "dang_ki" trong phần cuối trang của tất cả các trang, em có thể làm như sau:
@@ -123,7 +128,7 @@ Ví dụ:
   font-size: 16px;
   color: #333;
 }
-    </div>
+    </pre>
 
     <a href="index.html">← Quay lại trang chính</a>
 
